--- a/components/css/buttons.css
+++ b/components/css/buttons.css
@@ -100,20 +100,26 @@
     opacity: 1;
 }
 
-.music-btn {
-    width: 80px;
-    height: 100px;
+i.arrow-btn {
+    position: absolute;
 
-    position: fixed;
-    left: 10px;
-    bottom: 5px;
-
-    opacity: .6;
-    transition: all .3s;
-    
     cursor: pointer;
-    z-index: 999;
+
+    padding: 5px;
 }
-.music-btn:hover {
-    opacity: 1;
+
+i.arrow-btn-right {
+        top: 40%;
+        right: .1em;
+    transform: translateY(8px); 
+}
+
+i.arrow-btn-left {
+        top: 40%;
+        left: .1em;
+    transform: translateY(8px); 
+}
+
+i.arrow-btn:hover {
+    font-size: 4.5em;
 }
