--- a/components/css/projects.css
+++ b/components/css/projects.css
@@ -7,6 +7,7 @@ i {
     -webkit-background-clip: text;
     color: transparent;
     background-image: var(--gradient-theme);
+    filter: drop-shadow(2px 2px 0px var(--secondary-color));
 }
 
 .slider-projetos {
@@ -22,22 +23,13 @@ i {
     justify-content: flex-end;
     align-items: center;
 } 
-.project-container.active-left {
-    animation: slideLeft .8s;
-}
-.project-container.active-right {
-    animation: slideRight .8s;
-}
 .project-container {
-    width: clamp(70vw, 37.5em, 22.5em);
-    height: 350px;
+    width: clamp(80vw, 37.5em, 22.5em);
+    height: clamp(80vh, 450px, 400px);
     overflow: hidden;
     background-size: cover;
 
     display: none;
-
-    border: 2px solid transparent;
-    border-image: var(--gradient-theme-reverse) 10;
 
     position: relative;
 
@@ -61,6 +53,9 @@ i {
     visibility: visible;
     transform: translateY(0);
     background-color: #0000009e;
+}
+.project-container:hover img {
+    filter: none;
 }
 
 .botao-link:before {
@@ -100,27 +95,17 @@ i {
     background: transparent;
     border: 2px solid var(--primary-color);
 }
-i.arrow-btn-right {
+
+.project-container > img {
     position: absolute;
-        top: 40%;
-        right: clamp(3.3vw, 1.5em, .5em);
-    transform: translateY(8px); 
+        top: 0;
+        left: 0;
 
-    cursor: pointer;
+    filter: grayscale();
 
-    padding: 5px;
-}
-i.arrow-btn-left {
-    position: absolute;
-        top: 40%;
-        left: clamp(3.3vw, 1.5em, .5em);
-    transform: translateY(8px); 
+    width: 100%;
+    height: 100%;
 
-    cursor: pointer;
-
-    padding: 5px;
-}
-i.arrow-btn-left:hover, i.arrow-btn-right:hover {
-    font-size: 4.5em;
-    filter: drop-shadow(3px 6px 7px #d4a7f873);
+    object-fit: cover;
+    transition: filter .8s ease;
 }
