--- a/components/css/style.css
+++ b/components/css/style.css
@@ -1,6 +1,7 @@
 @import './reset.css';
 @import './responsive.css';
 @import './header.css';
+@import './footer.css';
 @import './buttons.css';
 @import './projects.css';
 @import './animations.css';
@@ -29,21 +30,6 @@ h4 {
     color: var(--primary-theme-color);
 }
 
-footer {
-    border-top: 3px solid transparent;
-    border-image: var(--gradient-theme) 10;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-
-    width: 65%;
-    margin: auto;
-
-    z-index: 100;
-}
-
 main {
     width: 100%;
     height: 100vh;
@@ -57,7 +43,7 @@ main {
 
     position: relative;
 
-    padding-top: 2em;
+    padding-top: 4em;
 }
 
 .page-content {
