--- a/components/css/style.css
+++ b/components/css/style.css
@@ -22,6 +22,14 @@ p {
     margin: 4px;
     padding: 10px;
 }
+p > a {
+    color: var(--primary-theme-color);
+    transition: all .4s;
+}
+p > a:hover {
+    color: var(--secondary-text-color);
+    text-decoration: underline;
+}
 
 h4 {
     font-family: Arial;
