--- a/components/css/projects.css
+++ b/components/css/projects.css
@@ -1,80 +1,54 @@
-i {
-    font-size: 4em;
-    z-index: 2;
-    transition: all .5s;
-
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    background-image: var(--gradient-theme);
-    filter: drop-shadow(2px 2px 0px var(--secondary-color));
-}
-
-.slider-projetos {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.project-container.active-right, .project-container.active-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+#projects {
+    max-width: 1900px;
+    justify-content: flex-start;
     align-items: center;
-} 
+}
+
 .project-container {
-    width: clamp(80vw, 37.5em, 22.5em);
-    min-height: 400px;
+    min-width: 360px;
+    max-width: 430px;
+    height: 220px;
     overflow: hidden;
 
-    display: none;
-
-    position: relative;
-
     transition: all .5s;
 }
-.link-container {
+.img-projeto {
+    width: 100%;
+    height: 100%;
+    transition: all .5s;
+}
+
+.project-info, .link-container {
     visibility: hidden;
     transition: all .6s;
-    transform: translateY(100px);
-
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-
-    width: 100%;
 }
 
+.project-container:hover .project-info {
+    visibility: visible;
+    background-color: #0000009e;
+    transform: translateY(-115px);
+    padding-bottom: 1em;
+    padding-left: 5px;
+    width: 100%;
+
+}
 .project-container:hover .link-container {
     visibility: visible;
-    transform: translateY(0);
-    background-color: #0000009e;
+    transform: translate(230px, -220px);
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
-.project-container:hover img {
-    filter: none;
+
+.project-info > .lang-icon {
+    width: 40px;
+    opacity: .9;
 }
 
-.botao-link:before {
-    content: '';
+.project-info > h3 {
+    font-size: 2em;
+} 
 
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    z-index: -1;
-
-    width: 0;
-    height: 100%;
-
-    background-image: var(--gradient-theme);
-    transition: all .5s;
-}
-.botao-link:hover:before {
-    width: 100%;
-}
 
 .link-container > .botao-link {
     width: 130px;
@@ -93,18 +67,4 @@ i {
     color: var(--primary-color);
     background: transparent;
     border: 2px solid var(--primary-color);
-}
-
-.project-container > img {
-    position: absolute;
-        top: 0;
-        left: 0;
-
-    filter: grayscale();
-
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-    transition: filter .8s ease;
 }
