--- a/components/css/responsive.css
+++ b/components/css/responsive.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 60em) {
     .mobile-menu {
-        width: 100%;
+        width: 6em;
         font-size: .8em;
         position: fixed;
             left: 1.5em;
