--- a/components/css/header.css
+++ b/components/css/header.css
@@ -9,6 +9,7 @@ header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 
 }
 header.hidden {
