--- a/components/css/projects.css
+++ b/components/css/projects.css
@@ -40,6 +40,8 @@
     transform: translate(230px, -220px);
     display: flex;
     flex-wrap: wrap;
+    width: 135px;
+    padding: 5px;
     gap: 5px;
 }
 
