--- a/components/css/projects.css
+++ b/components/css/projects.css
@@ -23,6 +23,7 @@
 
 .project-info, .link-container {
     visibility: hidden;
+    transform: translate(230px, 0px);
     transition: all .6s;
 }
 
@@ -37,7 +38,7 @@
 }
 .project-container:hover .link-container {
     visibility: visible;
-    transform: translate(230px, -220px);
+    transform: translateY(-220px);
     display: flex;
     flex-direction: column;
     gap: 5px;
