--- a/components/css/projects.css
+++ b/components/css/projects.css
@@ -10,7 +10,7 @@
     min-width: 450px;
     max-width: 600px;
 
-    height: 220px;
+    height: auto;
     overflow: hidden;
 
     transition: all .5s;
